conditionals codealong and updating index.html pages

--- a/04-scope-objects/starter-code/4-object-exercise/monkey.html
+++ b/04-scope-objects/starter-code/4-object-exercise/monkey.html
@@ -1,11 +1,10 @@
-<html>
-    <head>
-        <title>Monkey Object Practice</title>
-    </head>
-    <body>
-        <h1>Monkey Object Practice!</h1>
-        <p>Open the console!</p>
-
-        <script src="monkey.js"></script>
-    </body>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+  </head>
+  <body>
+    <h1>Open your console!</h1>
+    <!-- js -->
+    <script src="monkey.js"></script>
+  </body>
 </html>
