--- a/06-json-dom/starter-code/1-json-codealong/index.html
+++ b/06-json-dom/starter-code/1-json-codealong/index.html
@@ -1,9 +1,10 @@
-<html>
-    <head>
-    </head>
-    <body>
-        <h1>JSON Codealong</h1>
-        <p>Open your console!</p>
-        <script src="app.js"></script>
-    </body>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+  </head>
+  <body>
+    <h1>Open your console!</h1>
+    <!-- js -->
+    <script src="app.js"></script>
+  </body>
 </html>
