--- a/04-scope-objects/starter-code/0-scope-codealong/index.html
+++ b/04-scope-objects/starter-code/0-scope-codealong/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-</head>
-<body>
-  <!-- jQuery -->
-  <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
-  <!-- js -->
-  <script src="app.js"></script>
-</body>
+  <head>
+  </head>
+  <body>
+    <h1>Open your console!</h1>
+    <!-- js -->
+    <script src="app.js"></script>
+  </body>
 </html>
