--- a/06-json-dom/starter-code/2-json-exercise/app.html
+++ b/06-json-dom/starter-code/2-json-exercise/app.html
@@ -1,8 +1,10 @@
-<html>
-    <head>
-        <script src="app.js"></script>
-    </head>
-    <body>
-
-    </body>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+  </head>
+  <body>
+    <h1>Open your console!</h1>
+    <!-- js -->
+    <script src="app.js"></script>
+  </body>
 </html>
