--- a/04-scope-objects/starter-code/scope-lab/index.html
+++ b/04-scope-objects/starter-code/scope-lab/index.html
@@ -2,13 +2,14 @@
 <html lang="en-us">
 <head>
 	<meta charset="utf-8">
-	<title>Ice Cream Store</title>
+	<title>Scope</title>
 	<link href="https://fonts.googleapis.com/css?family=Raleway:400,700" rel="stylesheet">
 	<link rel="stylesheet" href="css/main.css">
 </head>
 <body>
 
 	<h1>Scope</h1>
+	<p>Open the console!</p>
 
 	<script src="js/main.js"></script>
 
