--- a/07-dom-jquery/solution-code/jquery-exercise/index.html
+++ b/07-dom-jquery/solution-code/jquery-exercise/index.html
@@ -34,8 +34,10 @@
 		</footer>
 
 	<!-- Include jQuery script in page, before closing </body> tag and after all your content. -->
+	<script src="js/jquery-3.2.1.min.js"></script>
 
 	<!-- Include your javascript AFTER you've included the jQuery script -->
+	<script src="js/main.js"></script>
 
 
 </body>
