best practice exercises

--- a/09-advanced-jquery/starter-code/best-practices-exercise/index.html
+++ b/09-advanced-jquery/starter-code/best-practices-exercise/index.html
@@ -7,7 +7,7 @@
 <body>
   <h1>Favorite Things</h1>
   <ul id="fav-list">
-    <li class="fav-thing">Dog bites</li>
+    <li class="fav-thing">Dog Bites</li>
     <li class="fav-thing">Bee Stings</li>
     <li class="fav-thing">Feeling Bad</li>
   </ul>
@@ -18,7 +18,6 @@
   </form>
 
   <script src="js/jquery-3.2.1.min.js"></script>
-  
   <script src="js/main.js"></script>
 </body>
 </html>
