--- a/14-closures-module-pattern/starter-code/0-car-objects/index.html
+++ b/14-closures-module-pattern/starter-code/0-car-objects/index.html
@@ -1,8 +1,9 @@
 <html>
     <head>
-        <script src="app.js"></script>
     </head>
     <body>
+        <h1>Open the console!</h1>
 
+        <script src="app.js"></script>
     </body>
 </html>
