--- a/14-closures-module-pattern/starter-code/8-iife-exercise/index.html
+++ b/14-closures-module-pattern/starter-code/8-iife-exercise/index.html
@@ -4,6 +4,7 @@
   <title></title>
 </head>
 <body>
+  <h1>Open the console!</h1>
 
   <script src="main.js" type="text/javascript" charset="utf-8" async defer></script>
 </body>
