--- a/14-closures-module-pattern/starter-code/modules-codealong/index.html
+++ b/14-closures-module-pattern/starter-code/modules-codealong/index.html
@@ -3,10 +3,10 @@
 <head>
 </head>
 <body>
+  <h1>Open the console!</h1>
   <!-- jQuery -->
   <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
   <!-- js -->
   <script src="app.js"></script>
-  <script src="app2.js"></script>
 </body>
 </html>
