--- a/14-closures-module-pattern/solution-code/modules-exercise/index.html
+++ b/14-closures-module-pattern/solution-code/modules-exercise/index.html
@@ -3,6 +3,7 @@
 <head>
 </head>
 <body>
+  <h1>Open the console!</h1>
   <!-- jQuery -->
   <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
   <!-- js -->
