cleaning up some events stuff

--- a/08-events-jquery/starter-code/events-exercise/index.html
+++ b/08-events-jquery/starter-code/events-exercise/index.html
@@ -19,16 +19,16 @@
 
 	<header class="row">
 		<h1>Color Blocks</h1>
-		<p id="r">Hide the red block</p>
-		<p id="b">Hide the blue block</p>
-		<p id="y">Hide the yellow block</p>
+		<p id="redBtn">Hide the red block</p>
+		<p id="blueBtn">Hide the blue block</p>
+		<p id="yellowBtn">Hide the yellow block</p>
 		<p id="show">Show all blocks</p>
 	</header>
 
-	<div class="albums clearfix row" id="main">
-		<section class="red">&nbsp;</section>
-		<section class="blue">&nbsp;</section>
-		<section class="yellow">&nbsp;</section>
+	<div class="blocks clearfix row" id="main">
+		<div id="redBlock" class="block">&nbsp;</div>
+		<div id="blueBlock" class="block">&nbsp;</div>
+		<div id="yellowBlock" class="block">&nbsp;</div>
 
 	</div>
 
