--- a/09-advanced-jquery/starter-code/multiple-events-exercise/index.html
+++ b/09-advanced-jquery/starter-code/multiple-events-exercise/index.html
@@ -18,6 +18,6 @@
   </form>
 
   <script src="js/jquery-3.2.1.min.js"></script>
-  <script src="js/main.js"></script>
+  <script src="js/main.js" type="text/javascript" charset="utf-8" async defer></script>
 </body>
 </html>
