--- a/04-scope-objects/solution-code/Homework-1/fizzbuzz/index.html
+++ b/04-scope-objects/solution-code/Homework-1/fizzbuzz/index.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <title>FizzBuzz</title>
   </head>
   <body>
+    <h1>FizzBuzz</h1>
+    <p>Open your console to see the result!</p>
+
     <!-- js -->
     <script src="app.js"></script>
   </body>
